--- a/src/asset/style.scss
+++ b/src/asset/style.scss
@@ -24,5 +24,5 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 
 body{
-    background-color: aqua;
+    background-color: red;
 }
