--- a/src/asset/css/modal.scss
+++ b/src/asset/css/modal.scss
@@ -10,6 +10,14 @@ form #password{
   margin-bottom:1rem ;
 }
 
+form #identifiant{
+  margin-bottom:1rem ;
+}
+
+form #email{
+  margin-bottom:1rem ;
+}
+
 #error_login{
 color: red;
 }
