modif couleur du tableau recruteur

--- a/src/asset/css/recruteur.scss
+++ b/src/asset/css/recruteur.scss
@@ -9,7 +9,7 @@
 
 #tableau .box-nb-candidature{
   padding: 1.5rem;
-  background: white;
+  //background: #F8FBFE;
   border-radius: 5px;
   width: 30%;
   font-size: 17px;
@@ -90,7 +90,7 @@ th {
 
 thead{
   border-radius: 10px;
-  background-color: lime;
+
 }
 
 
