ajout des  detail avec boucle

--- a/src/asset/css/recruteur.scss
+++ b/src/asset/css/recruteur.scss
@@ -109,3 +109,11 @@ td {
   gap: 1rem;
   justify-content: center;
 }
+
+
+
+.separator{
+  height: 2px;
+  width: 50%;
+  background:var(--bleu);
+}
